--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ name = "pypi"
 numpy = "*"
 pandas = "*"
 python-dateutil = "*"
+plotly = "*"
+requests = "*"
+beautifulsoup4 = "*"
 
 [dev-packages]
 
